--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Qué hacemos</h3>
-                <h1 class="display-1">Ayudamos a nuestros clientes con la implementacion y mantenimientos de soluciones
+                <h1 class="display-1">Ayudamos a nuestros clientes con la implementación y mantenimiento de soluciones
                 complejas y criticas para su negocio</h1>
             </div>
         </div> <!-- end section-header -->
@@ -663,8 +663,8 @@
 
                 <div class="contact-subscribe">
                     <form id="mc-form" class="group mc-form" novalidate="true">
-                        <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-                        <input type="submit" name="subscribe" value="Subscribe">
+                        <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Correo" required="">
+                        <input type="submit" name="subscribe" value="Subscribite">
                         <label for="mc-email" class="subscribe-message"></label>
                     </form>
                 </div> <!-- end contact-subscribe -->
