--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="home-content">
         <div class="row home-content__main">
 
-                <h1 class="font-roboto">
-                <span class="best-way">
+            <h1 class="font-roboto">
+            <span class="best-way">
                 " La mejor manera de <br>
                 predecir el futuro</span> <br>
                 es crearlo. "
@@ -172,7 +172,7 @@
             <!-- Service Mobile -->
             <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon service-icon--brand-identity">
-                    <i class="icon-mobile"></i>
+                    <i class="fas fa-mobile-alt"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Dispositivos móviles</h3>
@@ -186,7 +186,7 @@
             <!-- Service Custom -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                    <i class="icon-group"></i>
+                    <i class="far fa-object-group"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">A medida</h3>
@@ -210,7 +210,7 @@
             <!-- Service consulting -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--product-strategy">
-                    <i class="icon-cube"></i>
+                    <i class="far fa-handshake"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Consultoría</h3>
@@ -222,7 +222,7 @@
             <!-- Service agile -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--ui-design">
-                    <i class="icon-window"></i>
+                    <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Metodologías agiles</h3>
@@ -234,7 +234,7 @@
             <!-- Service webs -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-lego-block"></i>
+                    <i class="far fa-paper-plane"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Webs</h3>
@@ -258,7 +258,7 @@
             <!-- Service v -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-lego-block"></i>
+                    <i class="icon-network"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Networking</h3>
@@ -396,22 +396,10 @@
 
         <div class="row stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
 
-            <div class="col-block stats__col ">
-                <div class="stats__count">129</div>
-                <h5>Awards Received</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">1507</div>
-                <h5>Cups of Coffee</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">108</div>
-                <h5>Projects Completed</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">103</div>
-                <h5>Happy Clients</h5>
-            </div>
+            <div class="deck">Descargate nuestro Deck</div>
+            <div class="deck">para saber un poco mas de nosotros</div>
+            <!-- <input type="submit" name="subscribe" value="Descargar"> -->
+            <a href="/assets/witdev.pdf" download>Descargar</a>
 
         </div> <!-- end stats -->
 
