--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <!-- Service agile -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--ui-design">
-                    <i class="fas fa-clipboard-list"></i>
+                    <i class="far fa-clipboard"></i>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Metodologías agiles</h3>
@@ -296,7 +296,7 @@
                     <div class="service-text">
                         <div class="testimonials__author">
                             Alexis Verardo
-                            <span>CTO, Director Tecnología</span>
+                            <span>CTO, Director de Tecnología</span>
                             <span>Ingeniero en Sistemas</span>
                         </div>
                         <br>
@@ -315,7 +315,7 @@
                     <div class="service-text">
                         <div class="testimonials__author">
                             Jonatan Eseiza
-                            <span>CTO, Director Tecnología</span>
+                            <span>CEO, Director de Tecnología</span>
                             <span>Ingeniero en Sistemas</span>
                         </div>
                         <br>
@@ -435,7 +435,7 @@
 
                 <p class="contact-address">
                     Av. Marino Moreno 299<br>
-                    San Rafael Mendoza<br>
+                    San Rafael - Mendoza<br>
                 </p>
             </div> <!-- end contact-secondary -->
 
@@ -452,12 +452,6 @@
                     <li>
                         <a href="#0"><i class="fab fa-instagram"></i></a>
                     </li>
-                    <!--<li>-->
-                        <!--<a href="#0"><i class="fab fa-behance"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="#0"><i class="fab fa-dribbble"></i></a>-->
-                    <!--</li>-->
                 </ul> <!-- end contact-social -->
 
                 <div class="contact-subscribe">
