--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div> <!-- end home-content -->
 
         <ul class="home-sidelinks">
-            <li><a class="smoothscroll" href="#about">font-robotoNosotros<span>Quines somos</span></a></li>
+            <li><a class="smoothscroll" href="#about">Nosotros<span>Quines somos</span></a></li>
             <li><a class="smoothscroll" href="#services">Servicios<span>Que hacemos</span></a></li>
             <li><a  class="smoothscroll" href="#contact">Contacto<span>Estemos en contacto</span></a></li>
         </ul> <!-- end home-sidelinks -->
