--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=top>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg3.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=top>
 
         <div class="shadow-overlay"></div>
 
@@ -297,7 +297,6 @@
                         <div class="testimonials__author">
                             Alexis Verardo
                             <span>CTO, Director de Tecnología</span>
-                            <span>Ingeniero en Sistemas</span>
                         </div>
                         <br>
                         <p>
@@ -316,7 +315,6 @@
                         <div class="testimonials__author">
                             Jonatan Eseiza
                             <span>CEO, Director de Tecnología</span>
-                            <span>Ingeniero en Sistemas</span>
                         </div>
                         <br>
                         <p>
@@ -444,10 +442,10 @@
 
                 <ul class="contact-social">
                     <li>
-                        <a href="#0"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/WitDev.AR/"><i class="fab fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#0"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/WitdevO"><i class="fab fa-twitter"></i></a>
                     </li>
                     <li>
                         <a href="#0"><i class="fab fa-instagram"></i></a>
