iconos work + gitignore

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <!-- Service Mobile -->
             <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon service-icon--brand-identity">
-                    <i class="fas fa-mobile-alt"></i>
+                    <img src="images/work/mobile.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Dispositivos móviles</h3>
@@ -186,7 +186,7 @@
             <!-- Service Custom -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                    <i class="far fa-object-group"></i>
+                    <img src="images/work/medida.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">A medida</h3>
@@ -198,7 +198,7 @@
             <!-- Service ecommerce -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--web-design">
-                    <i class="icon-earth"></i>
+                    <img src="images/work/ecommerce.jpg" alt="Author image" class="testimonials__avatar">
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">E-Commerce</h3>
@@ -210,7 +210,7 @@
             <!-- Service consulting -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--product-strategy">
-                    <i class="far fa-handshake"></i>
+                    <img src="images/work/consultoria.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Consultoría</h3>
@@ -222,7 +222,7 @@
             <!-- Service agile -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--ui-design">
-                    <i class="far fa-clipboard"></i>
+                    <img src="images/work/agile.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Metodologías agiles</h3>
@@ -234,7 +234,7 @@
             <!-- Service webs -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--mobile-dev">
-                    <i class="far fa-paper-plane"></i>
+                    <img src="images/work/webs.png" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Webs</h3>
@@ -246,7 +246,7 @@
             <!-- Service infraestructura -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-lego-block"></i>
+                    <img src="images/work/infra.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Infraestructura</h3>
@@ -258,7 +258,7 @@
             <!-- Service v -->
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-network"></i>
+                    <img src="images/work/network.jpg" alt="Author image" class="testimonials__avatar">
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Networking</h3>
@@ -432,7 +432,7 @@
                 <h3 class="subhead subhead--light">Donde encontrarnos</h3>
 
                 <p class="contact-address">
-                    Av. Marino Moreno 299<br>
+                    Av. Mariano Moreno 299<br>
                     San Rafael - Mendoza<br>
                 </p>
             </div> <!-- end contact-secondary -->
