--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <div class="deck">Descargate nuestro Deck</div>
             <div class="deck">para saber un poco mas de nosotros</div>
             <!-- <input type="submit" name="subscribe" value="Descargar"> -->
-            <a href="/assets/witdev.pdf" download>Descargar</a>
+            <a href="/assets/witdev-deck.pdf" download>Descargar</a>
 
         </div> <!-- end stats -->
 
