--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <div class="service-text">
                         <div class="testimonials__author">
                             Jonatan Eseiza
-                            <span>CTO, Director Ejecutivo</span>
+                            <span>CEO, Director Ejecutivo</span>
                         </div>
                         <br>
                         <p>
