--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
                         </div>
                         <br>
                         <p>
-                            Entendemos que la movilidad en las aplicaciones es el futuro por eso hacemos las mejores app's
-                            móviles nativas e hibridas.
+                            Estudiante de ingeniería informática, técnico electromecánico. Socio fundador de WitDev. Emprendedor y programador.
+                            Apasionado por la tecnología, la buena música y el fútbol.
                         </p>
                     </div>
                 </div>
@@ -318,8 +318,8 @@
                         </div>
                         <br>
                         <p>
-                            Entendemos que la movilidad en las aplicaciones es el futuro por eso hacemos las mejores app's
-                            móviles nativas e hibridas.
+                            Estudiante de ingenieria informatica. Co-fundador de WitDev. Entusiaste, inquieto, emprendedor.
+                            Amo el desarrollo en toda su amplitud. Fanatico de la tecnologia, la pezca y Rockero hasta las venas.
                         </p>
                     </div>
                 </div>
@@ -334,11 +334,6 @@
                             Hugo Metral
                             <span>COO, Jefe de Operaciones</span>
                         </div>
-                        <br>
-                        <p>
-                            Entendemos que la movilidad en las aplicaciones es el futuro por eso hacemos las mejores app's
-                            móviles nativas e hibridas.
-                        </p>
                     </div>
                 </div>
 
@@ -352,11 +347,6 @@
                             Diego Tiglio
                             <span>CFO, Director Financiero</span>
                         </div>
-                        <br>
-                        <p>
-                            Entendemos que la movilidad en las aplicaciones es el futuro por eso hacemos las mejores app's
-                            móviles nativas e hibridas.
-                        </p>
                     </div>
                 </div>
 
@@ -370,11 +360,6 @@
                             Federico Rios
                             <span>CIO, Responsable de Servicios de Información</span>
                         </div>
-                        <br>
-                        <p>
-                            Entendemos que la movilidad en las aplicaciones es el futuro por eso hacemos las mejores app's
-                            móviles nativas e hibridas.
-                        </p>
                     </div>
                 </div>
 
