--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                         </div>
                         <br>
                         <p>
-                            Estudiante de ingenieria informatica. Co-fundador de WitDev. Entusiaste, inquieto, emprendedor.
-                            Amo el desarrollo en toda su amplitud. Fanatico de la tecnologia, la pezca y Rockero hasta las venas.
+                            Estudiante de ingenieria informatica. Co-founder de WitDev. Entusiaste, inquieto, emprendedor.
+                            Amo el desarrollo en toda su amplitud. Fanatico de la tecnologia, la pesca y Rockero hasta las venas.
                         </p>
                     </div>
                 </div>
