--- a/index.html
+++ b/index.html
@@ -269,10 +269,12 @@
 
         </div> <!-- end services-list -->
 
-    </section> <!-- end s-services -->
+    </section>
+
+    <!-- end s-services -->
 
 
-    <!-- works
+    <!-- Our Team
     ================================================== -->
     <section id='works' class="s-works">
 
@@ -319,7 +321,7 @@
                         <br>
                         <p>
                             Estudiante de ingenieria informatica. Co-founder de WitDev. Entusiaste, inquieto, emprendedor.
-                            Amo el desarrollo en toda su amplitud. Fanatico de la tecnologia, la pesca y Rockero hasta las venas.
+                            Amo el desarrollo en toda su amplitud. Fanatico de la tecnologia, la pesca y amante de la buena musica.
                         </p>
                     </div>
                 </div>
@@ -370,7 +372,107 @@
         </div> <!-- end testimonials-wrap -->
 
 
-    </section> <!-- end s-works -->
+    </section>
+
+    <!-- end s-works -->
+
+
+    <!-- Partners
+================================================== -->
+    <section id='partners' class="s-services light-gray">
+
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">Nuestros aliados</h3>
+                <h1 class="display-1 font-roboto">Cuando la confianza es alta, la comunicación es fácil, instantanea y efectiva.</h1>
+            </div>
+        </div>
+
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h1 class="display-2 font-roboto">Clientes</h1>
+            </div>
+        </div>
+
+        <!-- end section-header -->
+
+        <div class="row partners-list block-1-3 block-m-1-2 block-tab-full">
+
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/clients/logo%20oscuro.svg" alt="Author image" class="partner__avatar">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/clients/Reina%20Mora%20oscuro%20logo.svg" alt="Author image" class="partner__avatar">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/clients/smt.png" alt="Author image" class="partner__avatar">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/clients/global%20solutions%20logo.svg" alt="Author image" class="partner__avatar">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/clients/logo%20manisur.svg" alt="Author image" class="partner__avatar">
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- end services-list -->
+
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h1 class="display-2 font-roboto">Partners</h1>
+            </div>
+        </div>
+
+        <!-- end section-header -->
+
+        <div class="row partners-list block-1-3 block-m-1-2 block-tab-full">
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/partners/PIT.png" alt="Author image">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/partners/entropia.svg" alt="Author image" style="height: 40rem; width: 40rem;">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                    <img src="images/partners/gprs.png" alt="Author image">
+                </div>
+            </div>
+
+            <div class="col-block partner-item " data-aos="fade-up">
+                <div class="partner-icon service-icon--brand-identity">
+                     <img src="images/partners/ldv_logo.png" alt="Author image">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- end s-partners -->
 
 
     <!-- stats
